crates/ars-components/src/navigation/navigation_menu/snapshots/ars_components__navigation__navigation_menu__tests__navigation_menu_sub_item.snap
---
source: crates/ars-components/src/navigation/navigation_menu/mod.rs
expression: "snapshot_attrs(&api.sub_item_attrs(&key(\"blog\")))"
---
data-ars-part=sub-item
data-ars-scope=navigation-menu
