crates/ars-components/src/navigation/navigation_menu/snapshots/ars_components__navigation__navigation_menu__tests__navigation_menu_sub_list.snap
---
source: crates/ars-components/src/navigation/navigation_menu/mod.rs
expression: snapshot_attrs(&api.sub_list_attrs())
---
aria-orientation=horizontal
data-ars-part=sub-list
data-ars-scope=navigation-menu
role=menubar
