crates/ars-components/src/navigation/navigation_menu/snapshots/ars_components__navigation__navigation_menu__tests__navigation_menu_sub_trigger_open.snap
---
source: crates/ars-components/src/navigation/navigation_menu/mod.rs
expression: "snapshot_attrs(&api.sub_trigger_attrs(&key(\"blog\"), &content_id))"
---
aria-controls=nav-content-s-626c6f67
aria-expanded=true
aria-haspopup=true
data-ars-part=sub-trigger
data-ars-scope=navigation-menu
data-ars-state=open
id=nav-trigger-s-626c6f67
role=menuitem
tabindex=-1
