crates/ars-components/src/navigation/navigation_menu/snapshots/ars_components__navigation__navigation_menu__tests__navigation_menu_trigger_closed.snap
---
source: crates/ars-components/src/navigation/navigation_menu/mod.rs
expression: "snapshot_attrs(&api.trigger_attrs(&key(\"docs\"), &content_id))"
---
aria-expanded=false
aria-haspopup=true
data-ars-part=trigger
data-ars-scope=navigation-menu
data-ars-state=closed
id=nav-trigger-s-646f6373
role=menuitem
tabindex=-1
