crates/ars-components/src/navigation/navigation_menu/snapshots/ars_components__navigation__navigation_menu__tests__navigation_menu_trigger_open_focus_visible.snap
---
source: crates/ars-components/src/navigation/navigation_menu/mod.rs
expression: "snapshot_attrs(&api.trigger_attrs(&key(\"blog\"), &content_id))"
---
aria-controls=nav-content-s-626c6f67
aria-expanded=true
aria-haspopup=true
data-ars-focus-visible=true
data-ars-part=trigger
data-ars-scope=navigation-menu
data-ars-state=open
id=nav-trigger-s-626c6f67
role=menuitem
tabindex=0
