crates/ars-components/src/navigation/navigation_menu/snapshots/ars_components__navigation__navigation_menu__tests__navigation_menu_viewport_open.snap
---
source: crates/ars-components/src/navigation/navigation_menu/mod.rs
expression: snapshot_attrs(&api.viewport_attrs())
---
data-ars-part=viewport
data-ars-scope=navigation-menu
data-ars-state=open
